[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-resource-allocation"
version = "1.0.0"
description = "OpenEnv environment for emergency dispatch and hospital assignment."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "OpenEnv Participant"}
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.1",
  "requests==2.32.3",
  "pytest==8.2.0",
  "httpx==0.27.0",
  "openai==1.51.2",
  "openenv-core>=0.2.0"
]

[project.urls]
homepage = "https://github.com/yourusername/emergency-resource-allocation"
repository = "https://github.com/yourusername/emergency-resource-allocation"

[project.scripts]
server = "server.app:main"
